Seed claims repository with data stewards
